--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
 anthropic==0.39.0
 pandas==2.1.0
 requests==2.31.0
@@ -5,3 +7,4 @@ beautifulsoup4==4.12.0
 tqdm==4.66.0
 python-dotenv==1.0.0
 pytest==7.4.0
+pydantic>=2.0.0
