--- a/demo/requirements.txt
+++ b/demo/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.29.0
-plotly==5.18.0anthropic>=0.39.0
+plotly==5.18.0
+anthropic>=0.39.0
 pandas>=2.1.0
 python-dotenv>=1.0.0
 requests>=2.31.0
