Initial World-Class Commit

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,20 +1,12 @@
-.git
-.env
-.env.local
-__pycache__
-*.pyc
-.pytest_cache
-.venv
-venv
-node_modules
-*.egg-info
-.DS_Store
-.vscode
-.idea
-data/
-scripts/
-tests/
-docs/
+web/node_modules
+web/.next
+tests
+demo
+extensions
+sdks
+hub
+*.bat
 *.md
-.gitignore
-.github
+verify_engine.py
+playground.py
+PROJECT_STATUS.md
