--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-anthropic==0.39.0
-pandas==2.1.0
-requests==2.31.0
-beautifulsoup4==4.12.0
-tqdm==4.66.0
-python-dotenv==1.0.0
-pytest==7.4.0
-pydantic>=2.0.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pydantic>=2.6.0
+pydantic-settings>=2.1.0
+python-dotenv>=1.0.0
+anthropic>=0.18.0
+slowapi>=0.1.9
+prometheus-client>=0.19.0
+requests>=2.31.0
