--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
-[build-system]
-requires = ["setuptools>=68", "wheel"]
-build-backend = "setuptools.build_meta"
+# Note: build-system removed to avoid conflicts with Vercel's deployment
+# For local development, use: pip install -e .
 
 [project]
 name = "jailbreak-shield"
