--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ dependencies = [
     "anthropic>=0.39.0",
     "requests>=2.31.0",
     "pydantic>=2.0.0",
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "pydantic-settings>=2.1.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
