--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,23 @@
 {
   "version": 2,
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index.py"
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "web/package.json",
+      "use": "@vercel/next"
     }
   ],
-  "functions": {
-    "api/index.py": {
-      "runtime": "@vercel/python@4.0.0"
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/web/$1"
     }
-  }
+  ]
 }
