--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
   ],
   "functions": {
     "api/index.py": {
-      "runtime": "@vercel/python@4.3.1"
+      "runtime": "@vercel/python@4.3.1",
+      "includeFiles": "api/**,jailbreak_shield/**,requirements.txt"
     }
   }
 }
