--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
   "version": 2,
+  "framework": "nextjs",
   "buildCommand": "cd web && npm install && npm run build",
   "installCommand": "cd web && npm install",
-  "outputDirectory": "web/.next",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/index.py"
-    }
-  ],
-  "functions": {
-    "api/index.py": {
-      "runtime": "@vercel/python@4.3.1",
-      "includeFiles": "api/**,jailbreak_shield/**,requirements.txt"
-    }
-  }
+  "outputDirectory": "web/.next"
 }
