--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "cd web && npm install && npm run build",
-  "installCommand": "cd web && npm install",
-  "outputDirectory": "web/.next"
+  "rootDirectory": "web"
 }
